--- a/Microsoft.UI.Xaml.Projection/Microsoft.UI.Xaml.Projection.csproj
+++ b/Microsoft.UI.Xaml.Projection/Microsoft.UI.Xaml.Projection.csproj
@@ -6,6 +6,7 @@
     <UseUwp>true</UseUwp>
     <IsAotCompatible>true</IsAotCompatible>
     <DisableRuntimeMarshalling>true</DisableRuntimeMarshalling>
+    <DefaultLanguage>en-US</DefaultLanguage>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -13,9 +14,9 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.1.6" />
-    <PackageReference Include="Microsoft.UI.Xaml" Version="2.8.6" />
-    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2849.39" IncludeAssets="none" />
+    <PackageReference Include="Microsoft.Windows.CsWinRT" />
+    <PackageReference Include="Microsoft.UI.Xaml" />
+    <PackageReference Include="Microsoft.Web.WebView2" IncludeAssets="none" />
   </ItemGroup>
 
   <ItemGroup>
