--- a/cycloid/cycloid.csproj
+++ b/cycloid/cycloid.csproj
@@ -8,7 +8,7 @@
     <UseUwp>true</UseUwp>
     <RootNamespace>cycloid</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
-    <PublishAot>true</PublishAot>
+    <!--<PublishAot>true</PublishAot>-->
     <PublishProfile>win-$(Platform).pubxml</PublishProfile>
     <DisableRuntimeMarshalling>true</DisableRuntimeMarshalling>
     <EnableMsixTooling>false</EnableMsixTooling>
