--- a/cycloid/cycloid.csproj
+++ b/cycloid/cycloid.csproj
@@ -3,7 +3,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net9.0-windows10.0.26100.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
-    <WindowsSdkPackageVersion>10.0.26100.54</WindowsSdkPackageVersion>
+    <WindowsSdkPackageVersion>10.0.26100.57</WindowsSdkPackageVersion>
     <Platforms>x64</Platforms>
     <UseUwp>true</UseUwp>
     <DefaultLanguage>en-US</DefaultLanguage>
@@ -26,6 +26,7 @@
     <PackageReference Include="CommunityToolkit.Labs.Uwp.TransitionHelper" />
     <PackageReference Include="CommunityToolkit.Uwp.Animations" />
     <PackageReference Include="CommunityToolkit.Uwp.Extensions" />
+    <PackageReference Include="CommunityToolkit.Uwp.Helpers" />
     <PackageReference Include="CommunityToolkit.Uwp.Media" />
     <PackageReference Include="FluentIcons.Uwp" />
     <PackageReference Include="GeoJSON.Text" />
