--- a/cycloid/cycloid.csproj
+++ b/cycloid/cycloid.csproj
@@ -6,16 +6,14 @@
     <Platforms>x64</Platforms>
     <UseUwp>true</UseUwp>
     <DefaultLanguage>en-US</DefaultLanguage>
-    <!--<PublishAot>true</PublishAot>-->
+    <IsAotCompatible>true</IsAotCompatible>
+    <PublishAot>true</PublishAot>
     <PublishProfile>win-$(Platform).pubxml</PublishProfile>
     <DisableRuntimeMarshalling>true</DisableRuntimeMarshalling>
     <DefineConstants>$(DefineConstants);DISABLE_XAML_GENERATED_BREAK_ON_UNHANDLED_EXCEPTION;DISABLE_XAML_GENERATED_MAIN</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
-    
-    <!-- Workaround https://github.com/microsoft/CsWinRT/issues/1839 -->
-    <DynamicCodeSupport>true</DynamicCodeSupport>
-
+    <!--<DynamicCodeSupport>true</DynamicCodeSupport>-->
   </PropertyGroup>
 
   <ItemGroup>
@@ -28,8 +26,8 @@
     <PackageReference Include="CommunityToolkit.Uwp.Media" />
     <PackageReference Include="FluentIcons.Uwp" />
     <PackageReference Include="GeoJSON.Text" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed" />
+    <PackageReference Include="System.Text.Json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -47,9 +45,11 @@
     <Content Include="Assets\Supermarket.png" />
     <Content Include="Assets\Toilet.png" />
     <Content Include="Assets\Water.png" />
-
     <Content Include="Controls\StreetView.html" />
-    <Content Include="secrets.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="secrets.json" />
   </ItemGroup>
 
   <!-- Workaround Transitive Wpf/WinForms references crashing the XamlCompiler -->
