--- a/cycloid/cycloid.csproj
+++ b/cycloid/cycloid.csproj
@@ -6,14 +6,14 @@
     <Platforms>x64</Platforms>
     <UseUwp>true</UseUwp>
     <DefaultLanguage>en-US</DefaultLanguage>
-    <IsAotCompatible>true</IsAotCompatible>
     <PublishAot>true</PublishAot>
     <PublishProfile>win-$(Platform).pubxml</PublishProfile>
     <DisableRuntimeMarshalling>true</DisableRuntimeMarshalling>
     <DefineConstants>$(DefineConstants);DISABLE_XAML_GENERATED_BREAK_ON_UNHANDLED_EXCEPTION;DISABLE_XAML_GENERATED_MAIN</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
-    <!--<DynamicCodeSupport>true</DynamicCodeSupport>-->
+
+    <JsonSerializerIsReflectionEnabledByDefault>false</JsonSerializerIsReflectionEnabledByDefault>
   </PropertyGroup>
 
   <ItemGroup>
