--- a/cycloid.Core/cycloid.Core.csproj
+++ b/cycloid.Core/cycloid.Core.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <RootNamespace>cycloid</RootNamespace>
     <Nullable>enable</Nullable>
+    <IsAotCompatible>true</IsAotCompatible>
   </PropertyGroup>
 
   <ItemGroup>
