--- a/nuget.config
+++ b/nuget.config
@@ -1,20 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <!--
     <add key="CTLabs" value="https://pkgs.dev.azure.com/dotnet/CommunityToolkit/_packaging/CommunityToolkit-Labs/nuget/v3/index.json" protocolVersion="3" />
-    -->
-    <add key="CTPRs" value="https://pkgs.dev.azure.com/dotnet/CommunityToolkit/_packaging/CommunityToolkit-PullRequests/nuget/v3/index.json" protocolVersion="3" />
+    <!--<add key="CTPRs" value="https://pkgs.dev.azure.com/dotnet/CommunityToolkit/_packaging/CommunityToolkit-PullRequests/nuget/v3/index.json" protocolVersion="3" />-->
   </packageSources>
   <packageSourceMapping>
-    <!--
     <packageSource key="CTLabs">
       <package pattern="CommunityToolkit.Labs.*" />
     </packageSource>
-    -->
-    <packageSource key="CTPRs">
+    <!--<packageSource key="CTPRs">
       <package pattern="CommunityToolkit.*" />
-    </packageSource>
+    </packageSource>-->
     <packageSource key="local">
       <package pattern="*" />
     </packageSource>
